testsuite/tests/dependent/should_fail/T16326_Fail8.stderr

T16326_Fail8.hs:7:10: error:
    Illegal visible, dependent quantification in the type of a term
    (GHC does not yet support this)
    In an instance declaration
